# enigma2-plugin-vps

./: configure.ac
src_py/: Vps_check.py  Vps_setup.py  plugin.py
