AC_INIT([enigma2-plugin-systemplugins-vps],[1.6],[https://github.com/opendreambox/enigma2-plugin-vps/issues])
AM_INIT_AUTOMAKE([foreign])

AM_SILENT_RULES([yes])

AC_USE_SYSTEM_EXTENSIONS
AC_SYS_LARGEFILE

AC_PROG_CXX

AM_PATH_PYTHON

AC_CONFIG_FILES([
Makefile
meta/Makefile
src_cc/Makefile
src_py/Makefile
src_py/web-data/Makefile
src_py/web/Makefile
src_py/WebComponents/Makefile
src_py/WebComponents/Sources/Makefile
])
AC_OUTPUT
